--- a/webstandard/css/reset.css
+++ b/webstandard/css/reset.css
@@ -6,7 +6,7 @@ a {color: #273743; text-decoration: none;}
 a:hover {color: green;}
 
 /* 폰트 초기화 */
-body, input, textarea, select, button, table, {font-family: 'Nanum Gothic', sans-serif; font-size: 12px; line-height: 1.7;}
+body, input, textarea, select, button, table {font-family: 'Nanum Gothic', sans-serif; font-size: 12px; line-height: 1.7;}
 
 /* 제목 스타일 초기화 */
 h1, h2, h3, h4, h5, h6 {font-size: 12px; font-weight: normal;}
