--- a/webstandard/css/style.css
+++ b/webstandard/css/style.css
@@ -84,6 +84,22 @@ body {background-color: #f1f4fb;}
 .ban ul li {float: left; width: 330px; text-align: center;}
 */
 
+/* ban slick */
+.ban {position: relative;}
+.ban .slick-prev {cursor: pointer; position: absolute; left: -70px; top: 70px; width: 43px; height: 43px; 
+    background: url(../img/icon.png) -150px 0; text-indent: -9999px;}
+.ban .slick-next {position: absolute; right: -70px; top: 70px; width: 43px; height: 43px; 
+    background: url(../img/icon.png) -150px -43px; text-indent: -9999px;}
+.ban .slick-prev:hover {background: url(../img/icon.png) -193px 0;}
+.ban .slick-next:hover {background: url(../img/icon.png) -193px -43px;}
+.ban img {border: 4px solid #dcdcdc;}
+.ban img:hover {border-color: #98bcdc;}
+.slick-slide {margin: 10px 15px;}
+.slick-dots {position: absolute; bottom: 10px; display: block; width: 100%; text-align: center;}
+.slick-dots li {position: relative; display: inline-block; width: 15px; height: 15px; margin: 5px;}
+.slick-dots li button {cursor: pointer; display: block; font-size: 0; line-height: 0; width: 15px; height: 15px; background: #5dbfeb !important; border-radius: 50%;}
+.slick-dots li.slick-active button {background: #2b91c8 !important;}
+
 /* cont layout */
 .cont {overflow: hidden; padding-top: 30px;}
 .cont .box {width: 289px; height: 364px; float: left; margin: 0 30px 30px 0; padding-right: 30px; position: relative;}
