--- a/webstandard/css/reset.css
+++ b/webstandard/css/reset.css
@@ -15,13 +15,15 @@ h1, h2, h3, h4, h5, h6 {font-size: 12px; font-weight: normal;}
 li, ol, ul {list-style: none;}
 
 /* IR 효과 */
-.ir {width: 0; height: 0; font-size: 0; line-height: 0; overflow: hidden; position: absolute; left: 0; top: 0;}
+.ir_pm {display: block; overflow: hidden; font-size: 0; line-height: 0; text-indent: -9999px;} /* Phark Method */
+.ir_wa {display: block; overflow: hidden; position: relative; z-index: -1; width: 100%; height: 100%;} /* PWA IR */
+.ir_so {overflow: hidden; position: absolute; width: 0; height: 0; line-height: 0; text-indent: -9999px}
 
 /* 이탤릭체 초기화 */
 em, address {font-style: normal;}
 
 /* 테두리 초기화 */
-img, fieldset {border: 0;}
+img, fieldset, button {border: 0;}
 
 
 
