--- a/responsive/assets/css/reset.css
+++ b/responsive/assets/css/reset.css
@@ -25,6 +25,11 @@ em, address {font-style: normal;}
 /* 테두리 초기화 */
 img, fieldset, button {border: 0;}
 
+/* clearfix */
+.clearfix:before, .clearfix:after {
+	content:''; display: block; clear: both;
+}
+
 
 
 
