--- a/responsive/assets/css/style.css
+++ b/responsive/assets/css/style.css
@@ -1,9 +1,10 @@
 /* Layout */
 * {margin: 0; padding: 0;}
 #header {height: 327px; background: url(../img/header_bg.jpg) repeat-x center top;}
+#nav {}
 
 /* container */
-.container {width: 1200px; margin: 0 auto; background-color: rgba(0,0,0,.3);}
+.container {width: 1200px; margin: 0 auto;}
 
 /* quick */
 .quick {text-align: right;}
@@ -15,9 +16,60 @@
 .title p {font-size: 24px; padding: 10px 20px; background-color: #51b0dc; color: #fff; display: inline;}
 .title h1 a {font-size: 14px; color: #fff; padding: 10px 20px; background-color: #4a9abf; display: inline;}
 
+/* icon-font */
+.icon-font {text-align: center; margin-top: 50px; padding-bottom: 50px;}
+.icon-font li {display: inline; position: relative;}
+.icon-font li a {
+    display: inline-block; width: 60px; height: 60px; 
+    background-color: #3192bf; 
+    font-size: 35px; color: #fff; 
+    border-radius: 50%; 
+    margin: 0 3px;
+}
+.icon-font li a .tool {
+    font-size: 12px; background-color: #3192bf; 
+    display: inline-block; position: absolute; left: 50%; top: -70px; 
+    padding: 1px 7px; 
+    transform: translateX(-50%); border-radius: 6px 0;
+    opacity: 0;
+    transition: all .3s ease-in-out;
+}
+.icon-font li a:hover .tool {opacity: 1; top: -60px}
+.icon-font li a .tool::before {
+    content: ''; 
+    position: absolute; left: 50%; bottom: -5px; 
+    transform: translateX(-50%); 
+    border-top: 5px solid #3192bf;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+}
+
+/* 구 브라우저로 실행시 */
+.ie7 .icon-font {display: none;}
+.ie8 .icon-font li a .tool {display: none;}
+/* ------------------------------ header ------------------------------*/
 
 
 
+
+
+
+
+
+
+/* nav */
+.nav {padding: 30px 0;}
+.nav h2 {font-size: 16px; color: #25a2b0; padding-bottom: 5px;}
+.nav li {float: left; width: 20%; position: relative; padding-left: 8px; box-sizing: border-box;}
+.nav li::before {
+    content: ''; width: 3px; height: 3px; 
+    background-color: #25a2d0; 
+    position: absolute; left: 0; top: 8px; 
+    border-radius: 50%;
+}
+.nav li a {padding: 3px; border-radius: 2px;}
+.nav li a:hover {background-color: #25a2d0; color: #fff; transition: .3s ease;}
+/* ------------------------------ nav ------------------------------*/
 
 
 
@@ -25,19 +77,20 @@
 /* pc */
 @media (max-width: 1280px){
     .container {width: 100%;}
-    .row {padding: 0 10px;}
+    .row {padding: 0 15px;}
 }
 @media (max-width: 1024px){
-    
+    .nav li {width: 25%;}
 }
 @media (max-width: 960px){
     
 }
 /* 태블릿 */
 @media (max-width: 768px){
-    
+    .nav li {width: 33.3333%;}
 }
 @media (max-width: 600px){
+    .title, .icon-font, .nav {display: none;}
     
 }
 /* 모바일 */
