--- a/responsive/assets/css/style.css
+++ b/responsive/assets/css/style.css
@@ -1,13 +1,14 @@
 /* Layout */
 * {margin: 0; padding: 0;}
-#header {background: url(../img/header_bg.jpg) repeat-x center top;}
+body {background: url(../img/header_bg.jpg) repeat-x center top;}
+#header {}
 #nav {background-color: #f6fdff;}
 #tit {background-color: #fff; border-bottom: 1px solid #dbdbdb;}
 
-#contents {background-color: #f6fdff;}
-#cont-left {width: 250px; height: 500px; float: left; border-right: 1px solid #dbdbdb;}
-#cont-center {height: 500px; overflow: hidden; margin-right: 250px;}
-#cont-right {width: 250px; height: 500px; position: absolute; right: 0; top: 0; border-left: 1px solid #dbdbdb;}
+#contents {}
+#cont-left {width: 250px; float: left; border-right: 1px solid #dbdbdb;}
+#cont-center {min-height: 1400px; overflow: hidden; margin-right: 250px;}
+#cont-right {width: 250px; position: absolute; right: 0; top: 0; border-left: 1px solid #dbdbdb;}
 #footer {height: 200px; border-top: 1px solid #dbdbdb;}
 
 /* container */
@@ -109,24 +110,40 @@
 .cbox {padding: 15px; border-bottom: 1px solid #dbdbdb;}
 .cbox .cbox-tit {font-size: 20px; color: #2f7fa6;}
 .cbox .cbox-desc {border-bottom: dashed 1px #dbdbdb; padding-bottom: 15px; margin-bottom: 15px; color: #878787;}
-.cbox.column1 {}
-.cbox.column2 {}
-.cbox.column3 {}
-.cbox.column4 {}
-.cbox.column5 {}
-.cbox.column6 {}
-.cbox.column7 {}
-.cbox.column8 {}
-.cbox.column9 {}
 .contents .cbox:nth-child(4n) {border: 0;}
 
-
 /* menu */
-.menu {}
 .menu li {position: relative;}
-.menu li a {font-size: 16px; padding: 10px; text-transform: uppercase; color: #878787; border-bottom: 1px solid #dbdbdb; display:  block;}
-.menu li a:hover {background-color: #51b0dc; transition: all .5s ease; color: #fff;}
+.menu li a {font-size: 16px; padding: 10px; text-transform: uppercase; color: #878787; border-bottom: 1px solid #dbdbdb; display:  block; transition: all .3s ease;}
+.menu li a:hover {transition: all .5s ease; color: #000;}
 .menu li i {position: absolute; right: 0; top: 50%; transform: translateY(-50%);}
+
+/* Notice */
+.notice {position: relative;}
+.notice h5 {font-size: 14px; color: #2f7fa6;}
+.notice li {overflow: hidden; text-overflow: ellipsis; white-space: nowrap; position: relative; padding-left: 8px;} /* 1줄 효과 */
+.notice li::before {content: ''; width: 3px; height: 3px; background-color: #449ce2; position: absolute; left: 0; top: 8px; border-radius: 50%;}
+.notice .more {position: absolute; top: 6px; right: 0; text-transform: uppercase; font-size: 9px;}
+.notice .more a {color: #878787;}
+
+/* blog */
+.blog h5 {font-size: 14px; color: #2f7fa6; padding-bottom: 3px;}
+.blog-img {position: relative; display: block; font-size: 16px; margin-bottom: 3px;}
+.blog-img::before {content: ''; width: 100%; height: 100%; position: absolute; left: 0; top: 0; transition: all .5s ease;}
+.blog-img:hover::before {background-color: rgba(0,0,0,.4);}
+.blog-img img {display: block;}
+.blog-img em {position: absolute; left: 0; top: 50%; width: 100%; text-align: center; transform: translateY(-50%); opacity: 0; transition: all .5s ease;}
+.blog-img:hover em {opacity: 1; color: #fff;}
+
+/* blog2 */
+.blog2 h5 {font-size: 14px; color: #2f7fa6; padding-bottom: 3px;}
+.blog-img2 {position: relative; display: block; color: #fff; font-size: 16px; overflow: hidden;}
+.blog-img2::after {content: ''; width: 100%; height: 100%; display: block; position: absolute; left: 0; top: 0;}
+.blog-img2:hover::after {background-color: rgba(0,0,0,.3); z-index: 50;}
+.blog-img2 img {display: block; transform: scale(1.5,1.5); transition: all .5s ease;}
+.blog-img2:hover img {transform: scale(1,1); background-color: rgba(0,0,0,.5s);}
+.blog-img2 em {position: absolute; left: 0; top: 50%; width: 100%; text-align: center; transform: translateY(-50%); opacity: 0; transition: all .5s ease; z-index: 100;}
+.blog-img2:hover em {color: #fff; opacity: 1;}
 
 /* ------------------------------ contents ------------------------------*/
 
@@ -168,6 +185,14 @@
     .title, .icon-font, .nav, .tit .btn {display: none;}
     #cont-left {float: none; width: 100%; border-right: 0; }
     #cont-center {border-top: 1px solid #dbdbdb;}
+    .cbox.column1 {padding: 0; border-bottom: 0;}
+    .cbox.column1 .cbox-tit {display: none;}
+    .cbox.column1 .cbox-desc {display: none;}
+    .cbox.column2 {background-color: #f1f4fb;}
+    .menu li i {display: none;}
+    .menu li {float: left; width: 33.3333%; border-right: 1px solid #dbdbdb; box-sizing: border-box; text-align: center;}
+    .menu li:nth-child(3n) {border-right: 0;}
+    .menu li a {text-shadow: 0 0 5px rgba(0,0,0,.5); color: #fff;}
 }
 /* 모바일 */
 @media (max-width: 480px){
